# fineas

./: .env.example  .env.prod.example  .gitignore  AWS_DEPLOYMENT_PLAN.md  CHROMIUM_GUIDE.md  CLAUDE.md  Caddyfile  INTERVIEW_PREP.md  README.md  TODO.md  VERIFICATION.md  docker-compose.prod.yml  docker-compose.yml  docker_browser_command.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 594ebbe359eb_initial_schema.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/agents/: orchestrator.py  update_agent.py
apps/api/app/models/: __init__.py  asset.py  conversation.py  goal.py  projection.py  snapshot.py
apps/api/app/routers/: __init__.py  assets.py  chat.py  goals.py  projections.py  snapshots.py
apps/api/app/schemas/: __init__.py  asset.py  conversation.py  goal.py  projection.py  snapshot.py
apps/api/app/services/: projection.py
apps/api/app/tools/: portfolio.py
apps/backend/: Dockerfile  auth.py  config.py  database.py  entrypoint.sh  main.py  models.py  projection.py  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py
data/: CA_HFLOW.xlsx  assets.csv  example_assets.csv  example_snapshots.csv  historical_NW.csv  snapshots.csv
docs/: AGENTS.md  API_CONTRACT.md  DATA_MODEL.md  LEARNING_GUIDE.md  MIGRATION.md  PROJECTION_ENGINE.md
infra/: ec2.tf  main.tf  outputs.tf  sg.tf  terraform.tfvars.example  userdata.sh  variables.tf
scripts/: hash_password.py  init-test-db.sql  migrate_excel.py  seed.py
(+99 files in other folders)
