[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fineas-api"
version = "0.1.0"
description = "Fineas FIRE Copilot — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2.7",
    "pydantic-settings",
    "structlog",
    "httpx",
    "anthropic",
    "langgraph",
    "langchain-anthropic",
    "python-multipart",
    "python-Levenshtein",
    "numpy",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
migration = [
    "openpyxl",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
